--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,4 @@ updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/web" # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: "monthly"
